# Threshold_Onset

./: .dockerignore  .gitignore  CHANGELOG.md  COMPLETE_PROJECT_DOCUMENTATION.md  CONTRIBUTING.md  DOCUMENTATION_LOGIC.md  Dockerfile  ENHANCEMENT_PLAN.md  FILE  LARGE_CONTEXT_USAGE.md  Linguistic Dataset Generator.dbc  Makefile  PRE_FREEZE_AUDIT.md  PRE_PUSH_AUDIT.md  PROJECT_FREEZE.md  PROJECT_FULL_SOURCE.txt  PROJECT_STRUCTURE.md  PROJECT_VIEW.txt  QUICK_START.md  README.md  SANTOK_DEVELOPMENT_SUMMARY.md  SIMPLE_GUIDE.md  START_HERE.md  VISUAL_SUMMARY.txt  build_hindu_corpus.py  byte.json  char.json  chatwithgpt.md  clean_output_byte.json  clean_output_char.json  clean_output_grammar.json  clean_output_space.json  clean_output_subword.json  clean_output_subword_bpe.json  clean_output_subword_frequency.json  clean_output_subword_syllable.json  clean_output_word.json  docker-compose.yml  execution_log.txt  execution_log_2026-02-13_19-00-03.txt  (+47 more)
.cursor/: .cursor.md
archive/: README.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_PLAN.md
config/: default.json
data/: README.md
dbdata/: All Similarity Pairs-2026-04-19.csv  All Similarity Pairs-2026-04-19.tsv  All Similarity Pairs-2026-04-19.xlsx  Bottom 20 Least Similar Pairs-2026-04-19.csv  Bottom 20 Least Similar Pairs-2026-04-19.tsv  Bottom 20 Least Similar Pairs-2026-04-19.xlsx  Language Embeddings-2026-04-19.csv  Language Embeddings-2026-04-19.tsv  Language Embeddings-2026-04-19.xlsx  Linguistic Dataset Explorer.lvdash.json  Nearest Neighbors-2026-04-19.csv  Nearest Neighbors-2026-04-19.xlsx  Similarity Matrix 15 Key Languages-2026-04-19.csv  Similarity Matrix 15 Key Languages-2026-04-19.tsv  Similarity Matrix 15 Key Languages-2026-04-19.xlsx  Top 20 Similar Pairs-2026-04-19.csv  Top 20 Similar Pairs-2026-04-19.tsv  Top 20 Similar Pairs-2026-04-19.xlsx
docs/: API.md  CANONICAL_PHASE_MAP.md  CHATWITHCONVO.md  CLAUDE_FULL_HISTORY_MISTAKES_AND_FIXES.md  CLAUDE_HANDOFF_EVERYTHING_IN_DETAIL.md  DEPLOYMENT.md  ENTERPRISE_ROADMAP.md  EXECUTABLES.md  EXECUTION.md  EXECUTION_MODES.md  FULL_PROJECT_DOCUMENTATION.md  GAP_TO_MODEL_ROADMAP.md  Hindu spiritual corpus.py  IDENTITY_CONDITIONED_CONTINUATION.md  INTERACTIVE_FIRST.md  MEMORY_GROWTH_ANALYSIS.md  MODEL_CONTRACT.md  NEXT_LAYER_DESIGN.md  PAPER_ANALYSIS_AND_TEMPLATE.md  PAPER_ARCHITECTURE.md  PARADIGM_VALIDATION_CHECKLIST.md  PHASE_STATUS_CANONICAL.md  PHASE_TRANSITION_THEORY.md  Project_Readmes.md  README.md  REAL_MODEL.md  RECENT_DEVELOPMENTS.md  RUNBOOK.md  RUN_ALL_COMMANDS.md  SANTEK_BASE_MODEL_OBSERVATIONS.md  SANTEK_SLE_CHECK_AND_FIXES.md  STABILITY_LAW.md  STRUCTURAL_PREDICTION_LOOP.md  USE_ALL_OPTIONS.md  WHAT_YOU_RAN_AND_WHAT_ELSE_EXISTS.md
examples/: README.md
github_old/: PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md
paper/: README.md  (+5 more)
(+404 files in other folders)
